Fixed: Smaller images are not fitting fully to the width for entries in the filmstrip view #51

--- a/src/client/web/public/css/styles.css
+++ b/src/client/web/public/css/styles.css
@@ -435,6 +435,14 @@ img {
 }
 
 /*
+	Main image (e.g. entity image or images in the FilmStrip view)
+	Expand to fit width of container.
+*/
+.mainImage {
+	width: 100%;
+}
+
+/*
 	Image of the Poster
 */
 .postedByImage {
